--- a/index.html
+++ b/index.html
@@ -1,67 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Site du chef</title>
-        <link rel="stylesheet" href="./public/css/app.css">
-        <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site du chef</title>
+    <link rel="stylesheet" href="./public/css/app.css">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+  </head>
 
-    <body>
-        <nav class="navbar navbar-expand-lg" style="background-image: url('img_girl.jpg');">
-            <div class="collapse navbar-collapse nav1">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Disabled</a>
-                </li>
-              </ul>
-            </div>
-            <div class="nav2">
-                <img src="./public/images/logo.png" alt="">
-            </div>
-            <div class="collapse navbar-collapse nav3">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Disabled</a>
-                  </li>
-                </ul>
+  <body>
+    <header style="background-image: url('./public/images/banner1.jpg');">
+      <nav class="navbar navbar-expand-lg container">
+        <div class="collapse navbar-collapse nav1">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ABOUT US</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">MENU LIST</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">TEAM</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav2">
+          <img src="./public/images/logo.png" alt="">
+        </div>
+        <div class="collapse navbar-collapse nav3">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">RESERVATION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">TESTIMONIALS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CONTACT US</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Whatever your <span class="occasion">OCCASION,</span> <span class="taste">TASTE</span> <span class="makes-remember">makes</span> it one to <span class="makes-remember">remember!</span></h5>
+              <div>
+                <button class="btn-white">PURCHASE THEME</button>
+                <button class="btn-red">LEARN MORE</button>
               </div>
-          </nav>
-
-        <section class="menu" style="background-image: url('./public/images/main_bg.jpg');">
-            <div class="container">
-                <div class="our-story">
-                    <div><img src="./public/images/box-left-top.png" alt=""></div>
-                    <div><h1><span>OUR</span> Story</h1></div>
-                    <div><img src="./public/images/box-right-top.png" alt=""></div>
-                </div>
-                <div class="our-story-span">
-                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores distinctio pariatur id exercitationem in magnam optio. Vel est, magnam nisi animi repudiandae ex deserunt dolor soluta a. Facilis, mollitia sequi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius esse obcaecati beatae facere quod animi neque, accusantium, delectus provident, voluptatibus nemo cum enim molestias incidunt totam assumenda optio iste odit.</span>
-                </div>
             </div>
-        </section>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Whatever your <span class="occasion">OCCASION,</span> <span class="taste">TASTE</span> <span class="makes-remember">makes</span> it one to <span class="makes-remember">remember!</span></h5>
+              <div>
+                <button class="btn-white">PURCHASE THEME</button>
+                <button class="btn-red">LEARN MORE</button>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Whatever your <span class="occasion">OCCASION,</span> <span class="taste">TASTE</span> <span class="makes-remember">makes</span> it one to <span class="makes-remember">remember!</span></h5>
+              <div>
+                <button class="btn-white">PURCHASE THEME</button>
+                <button class="btn-red">LEARN MORE</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </header>
+
+    <section class="about" style="background-image: url('./public/images/main_bg.jpg');" >
+      <div class="story-menu">
+        <div class="our-story">
+          <div>
+            <img src="./public/images/box-left-top.png" alt="">
+          </div>
+          <div>
+            <h3><span class="text-danger">OUR</span> Story</h3>
+            <img src="./public/images/decoration_line.png" alt="">
+          </div>
+          <img src="./public/images/box-right-top.png" alt="">
+        </div>
+        <div class="about-p">
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur consectetur laborum et quae illum ipsum, quibusdam ipsa sequi, minus dolor officia adipisci optio atque nobis doloremque, odio suscipit animi maxime. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iste fugiat aperiam tenetur iure! Animi est incidunt vitae perspiciatis a impedit maxime nam quidem autem error porro, illo ullam adipisci!
+          </div>
+          <h3><span class="text-danger">OUR</span> Menu list</h3>
+          <img src="./public/images/decoration_line.png" alt="">
+        </div>
+        <div class="menu container">
+          <div class="row">
+            <div class="col-2">
+              <nav class="nav flex-column">
+                <a class="nav-link" href="#">BreackFast</a>
+                <a class="nav-link" href="#">Lunch</a>
+                <a class="nav-link" href="#">Snacks</a>
+                <a class="nav-link" href="#">Dinner</a>
+              </nav>
+            </div>
+            <div class="col-5 container image-a">
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$25</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$25</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$25</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$25</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$25</span></h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$35</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$35</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$35</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$35</span></h6>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-3">
+                  <img src="./public/images/menu_image_1.jpg" alt="">
+                </div>
+                <div class="col-6">
+                  <h5>Lorem ipsum dolor sit amet.</h6>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, eius?</p>
+                </div>
+                <div class="col-3">
+                  <h6><span class="badge badge-secondary text-danger">$35</span></h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <img src="./public/images/box-bottom-left.png" alt="">
+          </div>
+          <div>
+            <img src="./public/images/decoration_line.png" alt="">
+          </div>
+          <div>
+            <img src="./public/images/box-bottom_right.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="team bg-dark">
+
+    </section>
         
-        <script src="./node_modules/jquery/dist/jquery.js"></script>
-        <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-        <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    </body>
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+  </body>
 </html>
