--- a/index.html
+++ b/index.html
@@ -262,8 +262,29 @@
       </div>
     </section>
 
-    <section class="team bg-dark">
-
+    <section style="background-image: url('./public/images/team_background.jpg');" class="team">
+      <div class="team-titre">
+        <h3><span class="text-danger">MEET</span> Our Chef</h3>
+        <img src="./public/images/decoration_line.png" alt="">
+      </div>
+      <div class="chefs">
+        <div class="chef">
+          <img src="./public/images/chef1.png" alt="">
+          <span>Lorem, ipsum.</span>
+        </div>
+        <div class="chef">
+          <img src="./public/images/chef2.png" alt="">
+          <span>Lorem, ipsum.</span>
+        </div>
+        <div class="chef">
+          <img src="./public/images/chef3.png" alt="">
+          <span>Lorem, ipsum.</span>
+        </div>
+        <div class="chef">
+          <img src="./public/images/chef4.png" alt="">
+          <span>Lorem, ipsum.</span>
+        </div>
+      </div>
     </section>
         
     <script src="./node_modules/jquery/dist/jquery.js"></script>
