--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <img src="./public/images/box-right-top.png" alt="">
         </div>
         <div class="about-p">
-          <div>
+          <div class="container">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur consectetur laborum et quae illum ipsum, quibusdam ipsa sequi, minus dolor officia adipisci optio atque nobis doloremque, odio suscipit animi maxime. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iste fugiat aperiam tenetur iure! Animi est incidunt vitae perspiciatis a impedit maxime nam quidem autem error porro, illo ullam adipisci!
           </div>
           <h3><span class="text-danger">OUR</span> Menu list</h3>
@@ -184,7 +184,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-5">
+            <div class="col-5 image-b">
               <div class="row">
                 <div class="col-3">
                   <img src="./public/images/menu_image_1.jpg" alt="">
@@ -283,6 +283,112 @@
         <div class="chef">
           <img src="./public/images/chef4.png" alt="">
           <span>Lorem, ipsum.</span>
+        </div>
+      </div>
+    </section>
+
+    <section style="background-image: url('./public/images/main_bg.jpg');" >
+      <div class="reservation container">
+        <div class="reservation-titre">
+          <div>
+            <img src="./public/images/box-left-top-grey.png" alt="">
+          </div>
+          <div>
+            <h3><span class="text-danger">BOOK</span> Your Table</h3>
+            <img src="./public/images/decoration_line.png" alt="">
+          </div>
+          <div>
+            <img src="./public/images/box-right-top-grey.png" alt="">
+          </div>
+        </div>
+        <form class="formulaire" style="background-image: url('./public/images/book_table_bg.jpg');" >
+          <div class="text-white">
+            <p>For any query please call us at:<b>+91-1234567890</b></p>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <input type="text" class="form-control" id="inputEmail4" placeholder="Enter Full Name">
+            </div>
+            <div class="form-group col-md-4">
+              <input type="text" class="form-control" id="inputPassword4" placeholder="Enter Id">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <input type="text" class="form-control" id="inputEmail4" placeholder="Phone Number">
+            </div>
+            <div class="form-group col-md-4">
+              <select id="inputState" class="form-control">
+                <option selected>No Of Person</option>
+                <option>...</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <input type="text" class="form-control" id="inputEmail4" placeholder="Date">
+            </div>
+            <div class="form-group col-md-4">
+              <input type="text" class="form-control" id="inputPassword4" placeholder="Time">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-4">
+              <select id="inputState" class="form-control">
+                <option selected>Occasion</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="form-group col-md-4">
+              <select id="inputState" class="form-control">
+                <option selected class="option">Cuisine</option>
+                <option>...</option>
+              </select>
+            </div>
+          </div>
+        </form>
+        <div class="blog-titre">
+          <h3><span class="text-danger">OUR</span> Blog</h3>
+          <img src="./public/images/decoration_line.png" alt="">
+        </div>
+        <div class="blog">
+          <div class="photos">
+            <div class="gauche">
+              <div>
+                <img src="./public/images/blog_img1.jpg" alt="">
+              </div>
+              <div class="boite-rose">
+                <b>12</b>April 2017/ <b>20</b>Comment/ <b>35</b>Likes
+              </div>
+              <div class="text">
+                <h5>Lorem, ipsum.</h5>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </div>
+            </div>
+            <div class="droite">
+              <div>
+                <img src="./public/images/blog_img2.jpg" alt="">
+              </div>
+              <div class="boite-rose">
+                <b>12</b>April 2017/ <b>20</b>Comment/ <b>35</b>Likes
+              </div>
+              <div class="text">
+                <h5>Lorem, ipsum.</h5>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </div>
+            </div>
+          </div>
+          <div class="button-blog">
+            <button>KNOW MORE</button>
+          </div>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <img src="./public/images/box-bottom-left-grey.png" alt="">
+          </div>
+          <div>
+            <img src="./public/images/box-bottom_right-grey.png" alt="">
+          </div>
         </div>
       </div>
     </section>
