--- a/index.html
+++ b/index.html
@@ -392,6 +392,33 @@
         </div>
       </div>
     </section>
+
+    <section class="testimonials" style="background-image: url('./public/images/testimonials_background.jpg');">
+      <div class="testimonials-titre">
+        <h3><span class="text-danger">CLIENT</span> Testimonials</h3>
+        <img src="./public/images/decoration_line.png" alt="">
+      </div>
+      <div class="container">
+        <div class="testimonials-contenu row">
+          <div class="col-1.5">
+            <img src="./public/images/testimonial1.jpg" alt="">
+          </div>
+          <div class="text-testimonials col-4">
+            <h5>Lorem, ipsum.</h5>
+            <span class="text-danger">manager</span>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro reiciendis omnis cupiditate natus qui.</p>
+          </div>
+          <div class="text-testimonials col-4">
+            <h5>Lorem, ipsum.</h5>
+            <span class="text-danger">manager</span>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro reiciendis omnis cupiditate natus qui.</p>
+          </div>
+          <div class="col-1">
+            <img src="./public/images/testimonial1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
         
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
