--- a/index.html
+++ b/index.html
@@ -419,6 +419,24 @@
         </div>
       </div>
     </section>
+
+    <section class="contact"  style="background-image: url('./public/images/main_bg.jpg');">
+      <div class="contact-titre">
+        <h3><span class="text-danger">CLIENT</span> Testimonials</h3>
+        <img src="./public/images/decoration_line.png" alt="">
+      </div>
+      <div class="carré-contact">
+        <div class="text-contact">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        </div>
+        <div class="text-contact">
+          +91-9876543210
+        </div>
+        <div class="text-contact">
+          abc@abc.com
+        </div>
+      </div>
+    </section>
         
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
