--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         </div>
         <div class="blog">
           <div class="photos">
-            <div class="gauche">
+            <div class="gauche col-5">
               <div>
                 <img src="./public/images/blog_img1.jpg" alt="">
               </div>
@@ -365,7 +365,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur.</p>
               </div>
             </div>
-            <div class="droite">
+            <div class="droite col-5">
               <div>
                 <img src="./public/images/blog_img2.jpg" alt="">
               </div>
@@ -437,6 +437,66 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="footer"  style="background-image: url('./public/images/footer_background.jpg');">
+        <div class="footer-contenu">
+          <div class="footer-g col-4">
+            <div>
+              <h4>ABOUT US</h4> 
+            </div>
+            <div>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus provident dolor totam, quis temporibus inventore eius? Recusandae blanditiis voluptates excepturi dolor odit earum iste hic eum vero possimus, ut aperiam!
+            </div>
+            <div>
+              
+            </div>
+          </div>
+          <div class="footer-m col-5">
+            <div>
+              <h4>INSTAGRAM</h4>
+            </div>
+            <div>
+              <div>
+                <img src="./public/images/instragram_gallery_img1.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img2.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img1.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img2.jpg" alt="">
+              </div>
+              <div>
+                <img src="./public/images/instragram_gallery_img2.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img1.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img2.jpg" alt="">
+                <img src="./public/images/instragram_gallery_img1.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="footer-d col-4">
+            <div>
+              <h4>POPULAR TAGS</h4>
+            </div>
+            <div>
+              <div>
+                <button>Restaurant</button>
+                <button>Responsive Design</button>
+                <button>Hotel</button>
+              </div>
+              <div>
+                <button>Blog Section</button>
+                <button>SEO</button>
+                <button>Cuisine</button>
+              </div>
+              <div>
+                <button>Graphic</button>
+                <button>Food</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-red">
+      </div>
+    </footer>
         
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
